2008-12-20  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* people/urls.py: Fix to allow email as slug in URL.

2008-12-20  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-stats.py: Enclose update_stats in a try
	statement so as failure doesn't stop further updates. 
	* stats/models.py: Use exceptions for handling errors in checkout().
	Use thread locking to prevent concurrent VCS checkout (in a same branch
	instance).
	Fix save() signature.
	Subclass delete() function for branches to remove a VCS repo on the
	filesystem when the branch is deleted.
	* stats/tests/__init__.py: Add basic unit tests.

2008-12-20  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css: Various CSS improvements.
	* people/forms.py: New form to edit profile.
	* templates/people/person_detail.html:
	* people/urls.py:
	* people/views.py: Add the possibility to edit personal profile from
	person_detail template.
	* people/models.py: Add translatable help_text and field names because
	they are used in profile form.
	* templates/module_detail.html: Small adjustments to adapt main.css
	changes.
	* stats/models.py: Minor fixes.

2008-12-19  Claude Paroz  <claude@2xlibre.net>

	* teams/models.py: Add get_coordinator for FakeTeam.
	* teams/views.py: Add empty mem_groups tuple for FakeTeam.

2008-12-19  Claude Paroz  <claude@2xlibre.net>

	* templates/people/person_detail.html:
	* templates/person_base.html: Role display moved from base to detail.
	* templates/module_detail.html:
	* templates/teams/team_base.html: printroles variable no more useful.
	* templates/teams/team_detail.html: Temporarily deactivated team
	membership listing.

2008-12-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* docs/notes-upgrade.txt: Added note.
	* stats/models.py: Added unique constraint on (branch, domain,
	language) to Statistics table.

2008-12-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* docs/notes-upgrade.txt: Added information.
